[package]
name = "cyclic"
version = "0.1.0"
authors = ["mcncm <mcnallychristopherm@gmail.com>"]
edition = "2018"
description = "Simple, complete, and dependency-free modular arithmetic"
license = "GPL-3.0"
repository = "https://github.com/mcncm/cyclic"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[dependencies]
